--- a/public/css/App.css
+++ b/public/css/App.css
@@ -65,3 +65,14 @@ h1{
 table td {
   border-top: none !important;
 }
+
+.circle {
+  height: 45px;
+  width: 45px;
+  /* background-color: #bbb; */
+  border-radius: 100%;
+  display: inline-block;
+  line-height: 45px;
+  text-align: center;
+  border: 2px solid black;
+}
