--- a/public/css/App.css
+++ b/public/css/App.css
@@ -76,3 +76,22 @@ table td {
   text-align: center;
   border: 2px solid black;
 }
+
+.background {
+  background-color: #BCBCBC;
+  width: 100px;
+  height: 50px;
+  padding: 0; 
+  margin: 0
+}
+.line1 {
+  width: 112px;
+  height: 47px;
+  border-bottom: 1px solid red;
+  -webkit-transform:
+      translateY(-20px)
+      translateX(5px)
+      rotate(27deg); 
+  position: absolute;
+  /* top: -20px; */
+}
